[package]
name = "libconfig"
version.workspace = true
edition.workspace = true

[dependencies]
figment = { version = "0.10.19", features = ["env", "toml"] }
liberror.workspace = true
libpath.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
valuable.workspace = true

[dev-dependencies]
libproduct.workspace = true

[lints]
workspace = true
